<resources>
    <string name="app_name">FinanceTracker</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!-- SPEND FRAGMENT -->
    <string name="amount_hint">Amount spent</string>
    <string name="description_hint">Description</string>
    <string name="spend_button">Spend</string>
    <string name="type_dropdown">Type</string>
    <string name="inalid_input">Please enter an amount and a description</string>

    <!-- TAB NAMES -->
    <string name="spend_tab">Spend</string>
    <string name="history_tab">History</string>
    <string name="report_tab">Reports</string>

    <!-- HISTORY LIST -->
    <string name="type_text">Type: </string>
    <string name="date_text">Date: </string>
    <string name="amt_text">Amount: </string>
    <string name="desc_text">Description: </string>
    <string name="temp">TEMP</string>
</resources>
