<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_type_tv"
        android:text="@string/type_text"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_type"
        android:text="@string/temp"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/list_type_tv"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_amount_tv"
        android:layout_below="@+id/list_type_tv"
        android:text="@string/amt_text"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_amount"
        android:text="@string/temp"
        android:layout_margin="5dp"
        android:layout_below="@+id/list_type"
        android:layout_toEndOf="@id/list_amount_tv"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_date_tv"
        android:layout_below="@+id/list_amount_tv"
        android:text="@string/date_text"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_date"
        android:text="@string/temp"
        android:layout_margin="5dp"
        android:layout_toEndOf="@id/list_date_tv"
        android:layout_below="@+id/list_amount"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_description_tv"
        android:text="@string/desc_text"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_description"
        android:lines="5"
        android:layout_below="@+id/list_description_tv"
        android:text="@string/temp"
        android:layout_alignStart="@+id/list_description_tv"
        />
</RelativeLayout>